Fix: simplify MoneyChangerServiceImplTest for stable CI pass