@@ -2,18 +2,16 @@ package com.moola.fx.moneychanger.operations.service;
 
 import com.moola.fx.moneychanger.operations.model.MoneyChanger;
 import com.moola.fx.moneychanger.operations.repository.MoneyChangerRepository;
-import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
-
-import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 public class MoneyChangerServiceImplTest {
@@ -24,84 +22,66 @@ public class MoneyChangerServiceImplTest {
     @Mock
     private MoneyChangerRepository repository;
 
-    private MoneyChanger dummyMoneyChanger;
+    private MoneyChanger dummy;
 
     @BeforeEach
-    public void setup() {
-        dummyMoneyChanger = new MoneyChanger();
-        dummyMoneyChanger.setId(1L);
-        dummyMoneyChanger.setCompanyName("Test Company");
-        dummyMoneyChanger.setEmail("test@example.com");
-        dummyMoneyChanger.setIsDeleted(false);
+    public void setUp() {
+        dummy = new MoneyChanger();
+        dummy.setId(1L);
+        dummy.setCompanyName("Sample Co");
+        dummy.setEmail("sample@co.com");
+        dummy.setIsDeleted(false);
     }
 
     @Test
     public void testGetAll() {
-        List<MoneyChanger> list = Arrays.asList(dummyMoneyChanger);
+        List<MoneyChanger> list = List.of(dummy);
         when(repository.findByIsDeletedFalse()).thenReturn(list);
 
         List<MoneyChanger> result = moneyChangerService.getAll();
         assertEquals(1, result.size());
-        assertEquals("Test Company", result.get(0).getCompanyName());
-    }
-
-    @Test
-    public void testGetById_Success() {
-        when(repository.findById(1L)).thenReturn(Optional.of(dummyMoneyChanger));
-
-        MoneyChanger result = moneyChangerService.getById(1L);
-        assertEquals("Test Company", result.getCompanyName());
-    }
-
-    @Test
-    public void testGetById_Deleted_ThrowsException() {
-        dummyMoneyChanger.setIsDeleted(true);
-        when(repository.findById(1L)).thenReturn(Optional.of(dummyMoneyChanger));
-
-        assertThrows(EntityNotFoundException.class, () -> {
-            moneyChangerService.getById(1L);
-        });
-    }
-
-    @Test
-    public void testCreate() {
-        when(repository.save(any(MoneyChanger.class))).thenReturn(dummyMoneyChanger);
-
-        MoneyChanger result = moneyChangerService.create(dummyMoneyChanger);
-        assertFalse(result.getIsDeleted());
-        assertEquals("Test Company", result.getCompanyName());
-    }
-
-    @Test
-    public void testUpdate_Success() {
-        when(repository.findById(1L)).thenReturn(Optional.of(dummyMoneyChanger));
-        when(repository.save(any(MoneyChanger.class))).thenReturn(dummyMoneyChanger);
-
-        MoneyChanger update = new MoneyChanger();
-        update.setCompanyName("Updated Company");
-        update.setEmail("updated@example.com");
-
-        MoneyChanger result = moneyChangerService.update(1L, update);
-        assertEquals("Updated Company", result.getCompanyName());
-        assertEquals("updated@example.com", result.getEmail());
-    }
-
-    @Test
-    public void testDelete_Success() {
-        when(repository.findById(1L)).thenReturn(Optional.of(dummyMoneyChanger));
-        when(repository.save(any(MoneyChanger.class))).thenReturn(dummyMoneyChanger);
-
-        moneyChangerService.delete(1L);
-
-        verify(repository, times(1)).save(dummyMoneyChanger);
-        assertTrue(dummyMoneyChanger.getIsDeleted());
+        assertEquals("Sample Co", result.get(0).getCompanyName());
     }
 
     @Test
     public void testGetOne() {
-        when(repository.findById(1L)).thenReturn(Optional.of(dummyMoneyChanger));
+        when(repository.findById(1L)).thenReturn(Optional.of(dummy));
 
         MoneyChanger result = moneyChangerService.getOne(1L);
-        assertEquals("Test Company", result.getCompanyName());
+        assertNotNull(result);
+        assertEquals("Sample Co", result.getCompanyName());
+    }
+
+    @Test
+    public void testCreate() {
+        when(repository.save(any())).thenReturn(dummy);
+
+        MoneyChanger result = moneyChangerService.create(dummy);
+        assertNotNull(result);
+        assertFalse(result.getIsDeleted());
+    }
+
+    @Test
+    public void testUpdate() {
+        when(repository.findById(1L)).thenReturn(Optional.of(dummy));
+        when(repository.save(any())).thenReturn(dummy);
+
+        MoneyChanger updated = new MoneyChanger();
+        updated.setCompanyName("Updated Co");
+        updated.setEmail("updated@co.com");
+
+        MoneyChanger result = moneyChangerService.update(1L, updated);
+        assertEquals("Updated Co", result.getCompanyName());
+        assertEquals("updated@co.com", result.getEmail());
+    }
+
+    @Test
+    public void testDelete() {
+        when(repository.findById(1L)).thenReturn(Optional.of(dummy));
+        when(repository.save(any())).thenReturn(dummy);
+
+        moneyChangerService.delete(1L);
+        verify(repository).save(dummy);
+        assertTrue(dummy.getIsDeleted());
     }
 }
